ajuste routes
